# askygg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  image_editor_settings.yaml  imgui.ini  run.py  settings.json  setup.py
askygg/: CMakeLists.txt
askygg/src/: askygg.h
askygg/src/askygg/core/: Application.cpp  Application.h  Assert.h  Buffer.h  EngineUtils.cpp  EngineUtils.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.cpp  Math.h  Memory.h  MouseCodes.h  Random.cpp  Random.h  Time.cpp  Time.h  Timer.h  UUID.cpp  UUID.h  Utility.h  Window.cpp  Window.h
askygg/src/askygg/event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
askygg/src/askygg/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
askygg/src/askygg/platform/: PlatformApplicationInterface.h  PlatformDetection.h  PlatformPath.cpp  PlatformPath.h
askygg/src/askygg/platform/linux/: LinuxApplication.cpp  LinuxApplication.h
askygg/src/askygg/platform/mac_os/: MacOSApplication.cpp  MacOSApplication.h
askygg/src/askygg/platform/renderer_platform/metal/: MetalApplicationDelegate.cpp  MetalApplicationDelegate.h  MetalDevice.cpp  MetalDevice.h  MetalFramebuffer.cpp  MetalFramebuffer.h  MetalRenderPass.cpp  MetalRenderPass.h  MetalRenderer.cpp  MetalRenderer.h  MetalShader.cpp  MetalShader.h  MetalViewDelegate.cpp  MetalViewDelegate.h  MetalWindow.cpp  MetalWindow.h
askygg/src/askygg/platform/renderer_platform/opengl/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTimer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
askygg/src/askygg/platform/renderer_platform/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h
askygg/src/askygg/platform/windows/: GLFWWindow.cpp  GLFWWindow.h  GLFWXPlatformWindow.cpp  GLFWXPlatformWindow.h
askygg/src/askygg/renderer/: BufferLayout.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PlatformRenderAPI.h  PlatformRenderer.cpp  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureUtils.cpp  TextureUtils.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
askygg/src/askygg/scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
askygg/src/askygg/ui/: Dockspace.cpp  Dockspace.h  PropertyDrawer.cpp  PropertyDrawer.h  StatisticsPanel.cpp  StatisticsPanel.h  UIDrawerHelpers.cpp  UIDrawerHelpers.h  Viewport.cpp  Viewport.h
askygg_editor/: CMakeLists.txt
askygg_editor/assets/: image_editor_settings.yaml
askygg_editor/assets/shaders/: DisplayTexture.glsl
askygg_editor/assets/shaders/metal_shaders/: shader.metal
askygg_editor/assets/shaders/post_fx/: BarrelDistortion.glsl  ChromaticAberration.glsl  ContrastAdjust.glsl  HSVAdjust.glsl  Linearize.glsl  MultiPassBloom.glsl  OutputPass.glsl  RadialBloom.glsl  RadialBlur.glsl  Sharpen.glsl  Sobel.glsl  Vignette.glsl
askygg_editor/src/: EditorApplication.cpp
askygg_editor/src/ImageEditor/: ImageEditor.cpp  ImageEditor.h  ImagePass.cpp  ImagePass.h  PassHelper.h
askygg_editor/src/ImageEditor/Passes/: BarrelDistortionPass.cpp  BarrelDistortionPass.h  ChromaticAberrationPass.cpp  ChromaticAberrationPass.h  ContrastBrightnessPass.cpp  ContrastBrightnessPass.h  HSVAdjustmentPass.cpp  HSVAdjustmentPass.h  LinearizePass.cpp  LinearizePass.h  MultiPassBloomPass.cpp  MultiPassBloomPass.h  OutputComputePass.cpp  OutputComputePass.h  RadialBloomPass.cpp  RadialBloomPass.h  RadialBlurPass.cpp  RadialBlurPass.h  SharpenPass.cpp  SharpenPass.h  SobelPass.cpp  SobelPass.h  VignettePass.cpp  VignettePass.h
askygg_editor/src/Layers/: EditorLayer.cpp  EditorLayer.h  HeadlessLayer.cpp  HeadlessLayer.h
